# ChangeLog for dev-java/blowfishj
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/blowfishj/ChangeLog,v 1.4 2005/04/03 14:01:17 axxo Exp $

*blowfishj-2.14 (03 Apr 2005)

  03 Apr 2005; Thomas Matthijs <axxo@gentoo.org> -blowfishj-2.13.ebuild,
  +blowfishj-2.14.ebuild:
  version bump

  17 Feb 2005; Jan Brinkmann <luckyduck@gentoo.org> blowfishj-2.13.ebuild:
  added missing unzip dependency. see #69831

*blowfishj-2.13 (12 Nov 2004)

  12 Nov 2004; Karl Trygve Kalleberg <karltk@gentoo.org> +metadata.xml, 
  +blowfishj-2.13.ebuild:
  Initial import. Ebuild submitted by Saleem A. <compnerd@compnerd.org>, fixes
  #70326.
